--- a/CSS/main.css
+++ b/CSS/main.css
@@ -3,10 +3,11 @@ html, body {
     width:100%;
     height: 100%;
     font-family: 'Poppins', sans-serif;
-    background: #cac7c7f3;
+    background: #8b1010f3;
 }
 .navbar {
     padding: .8rem;
+    background: #000;
     } 
 .navbar .container-fluid .navbar-toggler {
     outline: none;
