--- a/CSS/main.css
+++ b/CSS/main.css
@@ -32,11 +32,16 @@ html, body {
     }
 
 .sec_prin .banner_video{
-    background: #f4f4f4;
     width: 80%;
     height: 500px;
     margin: auto;
     margin-top: 40px;
+    background: #fff;
+}
+.sec_prin .banner_video img {
+    width: 100%;
+    height: 500px;
+    object-fit:fill;
 }
 /* informacion */
 .informacion{
@@ -52,7 +57,6 @@ html, body {
     align-items: center;
     width: 1200px;
     flex-wrap: wrap;
-    /* height: 400px; */
 }
 
 .container-new .card{
@@ -89,7 +93,7 @@ html, body {
     height: auto;
 }
 
-.container-new .card .content-new::before
+/* .container-new .card .content-new::before
 {
     content: '';
     position:absolute;
@@ -98,7 +102,7 @@ html, body {
     width: 100%;
     height: 100px;
     background: linear-gradient(transparent, #6f00ff)
-}
+} */
 
 .container-new .card.active .content-new::before
 {
