--- a/CSS/servicios.css
+++ b/CSS/servicios.css
@@ -7,6 +7,7 @@ html, body {
 }
 .navbar {
     padding: .8rem;
+    background: #000;
     } 
 .navbar .container-fluid .navbar-toggler {
     outline: none;
@@ -179,6 +180,7 @@ html, body {
 .container .card img{
     width: 330px;
     height: 220px;
+    object-fit: cover;
 }
 .container .card h4{
     margin-top: 20px;
