--- a/CSS/contacto.css
+++ b/CSS/contacto.css
@@ -41,6 +41,10 @@ html, body {
 .navbar .container-fluid ul li .item-act:hover {
     color: #f9fd00;
     }
+.navbar .container-fluid a img{
+    width: 200px;
+    height: 80px;
+}
 
 .body {
     background: #FC5C7D;
@@ -178,3 +182,7 @@ hr.light-100 {
 .hr {
     border-top: solid 2px #000 !important;
     }
+footer img {
+    width: 200px;
+    height: 100px;
+}
