--- a/CSS/servicios.css
+++ b/CSS/servicios.css
@@ -30,6 +30,10 @@ html, body {
 .navbar .container-fluid ul li .item-act:hover {
     color: #f9fd00;
     }
+.navbar .container-fluid a img{
+    width: 200px;
+    height: 80px;
+}
 
 .btn-color{
     display:flex;
@@ -221,3 +225,7 @@ hr.light-100 {
 .hr {
     border-top: solid 2px #000 !important;
     }
+footer img {
+    width: 200px;
+    height: 100px;
+}
